# rose-bitsets

./: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: tests.yml
rose-bitset-derive/: Cargo.toml  README.md
rose-bitset-derive/src/: extras.rs  lib.rs  type_utils.rs
rose-bitset-derive/src/impls/: debug.rs  indices.rs  iter.rs  main.rs  mod.rs  tests.rs
src/: lib.rs
