[package]
name = "rose-bitset-derive"
version = "0.1.0-alpha"
authors = ["RosieTheGhostie <rosetheghost.dev@gmail.com>"]
edition = "2024"
description = "Procedural macros internal to the 'rose-bitsets' crate."
documentation = "https://docs.rs/rose-bitset-derive/latest/"
readme = "README.md"
repository = "https://github.com/RosieTheGhostie/rose-bitsets"
license = "MIT"

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
proc-macro-error = { version = "1.0.4", features = ["syn-error"] }
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = "2.0.100"
